Update how to use docs, replace accent-text color

--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -2,7 +2,7 @@
 	--vp-c-accent-bg: #f7931a;
 	--vp-c-accent: #f7931a;
 	--vp-c-accent-hover: #ef8007;
-	--vp-c-accent-text: #fff;
+	--vp-c-accent-text: #000;
 	--search-c-bg: var(--vp-c-bg);
   	--search-c-accent: var(--vp-c-accent);
   	--search-c-text: var(--vp-c-text);
